fix: Update image name in Docker scripts and HTML to use correct repository

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <div class="card-body">
                         <div class="mb-3">
                             <label for="apiUrlInput" class="form-label">Địa chỉ API:</label>
-                            <input type="text" id="apiUrlInput" class="form-control" value="http://localhost:8000">
+                            <input type="text" id="apiUrlInput" class="form-control" value="https://ocr.csharpp.com">
                         </div>
                         <div class="row">
                             <div class="col">
